Bug 226144 - remember filename schema used last
Summary: remember filename schema used last
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Metadata Editing and Reading (other bugs)
Version First Reported In: 2.8.0
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 227162 228673 229753 324928 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-10 15:07 UTC by Silver Salonen
Modified: 2018-04-09 19:28 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2010-02-10 15:07:40 UTC
Version:           2.2.2 (using KDE 4.4.0)
Installed from:    openSUSE RPMs

Amarok 1.4 had some pre-defined filename schemas to choose from or to update. Amarok 2 doesn't have these nor does it remember lastly used one etc.

1) The most basic functionality would be to just remember the lastly used schema.

2) One step further is to provide history for schemas and provide some useful schemas too.
Comment 1 kde 2010-02-15 17:57:59 UTC
Same here with Gentoo, Amarok 2.2.2

Part 1 is similar to https://bugs.kde.org/show_bug.cgi?id=226144
Comment 2 kde 2010-02-15 18:00:16 UTC
(In reply to comment #1)
> Same here with Gentoo, Amarok 2.2.2
> 
> Part 1 is similar to https://bugs.kde.org/show_bug.cgi?id=226144
https://bugs.kde.org/show_bug.cgi?id=213074 sorry
Comment 3 Silver Salonen 2010-02-16 08:19:25 UTC
I don't think part 1 is similar to that other bug report:
* in 213074 it's meant guessing tags for multiple files at once
* in here, 1) means just remembering the last settings.
Comment 4 Myriam Schweingruber 2010-02-16 10:25:24 UTC
Regardless of that, could you please only report one item per wish? This is impossible to track otherwise.
Comment 5 Silver Salonen 2010-02-16 11:23:56 UTC
Ok, sorry. I'll add a separate wish for item no. 2.
Comment 6 Kevin Funk 2010-02-18 19:51:41 UTC
*** Bug 227162 has been marked as a duplicate of this bug. ***
Comment 7 Myriam Schweingruber 2010-02-27 03:31:46 UTC
*** Bug 228673 has been marked as a duplicate of this bug. ***
Comment 8 Myriam Schweingruber 2010-03-07 09:00:20 UTC
*** Bug 229753 has been marked as a duplicate of this bug. ***
Comment 9 Myriam Schweingruber 2013-09-15 22:54:54 UTC
*** Bug 324928 has been marked as a duplicate of this bug. ***
Comment 10 Waleed Hamra 2013-10-27 20:03:14 UTC
This bug is still happening in Amarok 2.8, from Ubuntu repos.. Very annoying.
Comment 11 Gregor Münch 2014-01-27 21:29:49 UTC
Can confirm this with Amarok 2.8 and Sabayon. Did no one tested this before release?
Comment 12 Myriam Schweingruber 2014-01-28 07:17:09 UTC
Setting status to confirmed.
Comment 13 Dann 2015-03-13 22:10:54 UTC
Amarok 2.8.0 on Kubuntu 14.04.2, confirmed.

I tried overwriting the ~/.kde/share/config/amarokrc file with my own preset, even moving the Default and selected options to my preset, but it keeps being overwritten every time I select "Move to Collection"
Comment 14 ermonnezza 2015-10-29 23:45:30 UTC
Ok this is not a constructive comment but I cannot believe this bug is still open since 2010. I can confirm it in 2.8.0 on Kubunt 14.04. Filename based tagging was the killer feature of Amarok 1.4, and on of the main reasons I kept using KDE3 for so long. It was simply perfect back then. I had tons of presets saved and could very quickly bulk-tag whole discographies. Now there's a super easy interface, but you cannot save presets, not even from one song to the next. Useless.
Comment 15 reas 2015-11-27 20:29:09 UTC
Same with Linux Mint 17.2 KDE - this seems to be a longtime error since 2010. No preset will be remembered when saved. Only "Default". This is not a big problem... but a very old problem. Hopefully it will be done sometime..
Comment 16 Stefano Pettini 2016-08-01 00:43:26 UTC
A fix is finally on the way:
https://git.reviewboard.kde.org/r/128565/
Comment 17 Matěj Laitl 2016-08-20 10:44:37 UTC
Git commit 0e760e5f8d06d00e084c14b64875f58bb42bd8f1 by Matěj Laitl, on behalf of Stefano Pettini.
Committed on 20/08/2016 at 10:37.
Pushed by laitl into branch 'master'.

Organize tracks / Guess tags presets persisted properly.

FilenameLayoutWidget is reworked to fix an old bug regarding the presets
not being saved properly, that I was also able to reproduce.

Logic is not a bit more "linear". Presets are shared between "Organize tracks"
and "Guess tags" dialog. If this is not what is wanted, it can be easily changed,
just let me know. Presets are saved as soon as they are added, updated or deleted.
It is not anymore necessary to accept the dialog to save eventual changes.

The preset used is not saved with the marker "#DELIM#selected" anymore.
Presets are just presets. The one used is matched on the fly using the custom
preset field. If a preset matches the custom preset field, it's considered
selected. Users can of course create custom presets as before.
While presets are shared between the two dialogs, custom presets are not.

Add/Update/Remove work properly. Clicking on a preset name in the combobox
resets the custom pattern to the preset value, this is a new feature,
before it was not possible.

It's a bit difficult to explain, but UX is more natural, just give it a try.

A lot of testing was done (by Stefano), like:
- adding/updating/removing presets.
- if settings are persisted and shared when dialogs are cancelled or accepted.
- if custom patterns are persisted and not shared.
- resetting a modified pattern to its defualt.
- cancelling dialogs, modified presets are kept but custom patterns are not.

REVIEW: 128565

M  +3    -1    ChangeLog
M  +1    -1    src/amarokconfig.kcfg
M  +0    -5    src/dialogs/OrganizeCollectionDialog.cpp
M  +0    -2    src/dialogs/OrganizeCollectionDialog.h
M  +53   -49   src/widgets/FilenameLayoutWidget.cpp
M  +4    -6    src/widgets/FilenameLayoutWidget.h

http://commits.kde.org/amarok/0e760e5f8d06d00e084c14b64875f58bb42bd8f1
Comment 18 ermonnezza 2017-11-20 12:43:00 UTC
When will this fix for a 7 years old bug make it into a release? As the last release is from 2015 updating the package is useless.. Thanks!